# memory_bandwidth_monitor_for_AI

./: .gitignore  CMakeLists.txt  README.md
include/mbm/: mbm_profiler.hpp
scripts/: use-msbuild.ps1
src/: main.cpp  mbm_profiler.cpp
